--- a/01_thangnv/demogiaodien/css/style.css
+++ b/01_thangnv/demogiaodien/css/style.css
@@ -1,318 +1,290 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  color: #706972; }
 
-body{
-    max-width: 960px;
-    margin: 0 auto;
-}
+body {
+  max-width: 60em;
+  margin: 0 auto; }
 
+li {
+  list-style-type: none; }
 
-li{
-    list-style-type: none;
-}
+a {
+  text-decoration-line: none; }
 
-#header-page{
-    display: flex;  
-    height: 85px;
-    background: #ffffff;
-}
-
-.logo{
-    height: 50%;
+.header-page {
+  display: flex;
+  height: 85px; }
+  .header-page .logo-slogan {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 35%;
-    padding: 8px 0px 0px 8%;
-    
-}
-
-.mini-menu{
-    width: 65%;
+    background: transparent; }
+    .header-page .logo-slogan .logo {
+      height: 55px;
+      margin: 0.5em 2em; }
+    .header-page .logo-slogan .slogan {
+      height: 30px;
+      font-size: 9.86px;
+      margin: 0 3em; }
+  .header-page .mini-menu {
+    display: none; }
+  .header-page .contact-menu {
     height: 100%;
-    display: none;
-}
-.mini-menu select{
-   
-    font-weight: bold;
-    color: #939393;
-    height: 30px;
-    line-height: 85px;
-    border: 0; 
-    background: #ffffff ;
-    margin-top: 25px;   
-}
-.mini-menu select option{
-    height: 30px;
-}
+    width: 75%;
+    margin-right: 2em; }
+    .header-page .contact-menu .contact {
+      height: 35px;
+      line-height: 35px;
+      font-size: 9.86px; }
+      .header-page .contact-menu .contact ul {
+        height: 100%;
+        display: flex;
+        justify-content: flex-end; }
+        .header-page .contact-menu .contact ul li {
+          margin-left: 1em; }
+          .header-page .contact-menu .contact ul li p img {
+            margin-right: 0.2em;
+            margin-bottom: 0.3em; }
+    .header-page .contact-menu .menu {
+      height: 50px;
+      line-height: 50px;
+      display: flex;
+      justify-content: flex-end; }
+      .header-page .contact-menu .menu .left-menu {
+        font-size: 11.86px;
+        font-weight: bold; }
+        .header-page .contact-menu .menu .left-menu ul {
+          height: 100%;
+          display: flex;
+          padding-top: 15px; }
+          .header-page .contact-menu .menu .left-menu ul li {
+            height: 20px;
+            line-height: 20px;
+            margin-left: 0.6em; }
+            .header-page .contact-menu .menu .left-menu ul li a {
+              height: 20px;
+              margin: 0 5px; }
+            .header-page .contact-menu .menu .left-menu ul li:hover {
+              background: #00a2ed;
+              border-radius: 8px; }
+            .header-page .contact-menu .menu .left-menu ul li:hover a {
+              color: #ffffff;
+              text-decoration-line: none; }
+      .header-page .contact-menu .menu .right-menu ul {
+        display: flex; }
+        .header-page .contact-menu .menu .right-menu ul li {
+          margin-top: -0.3em;
+          margin-left: 0.4em; }
 
-.menu-contact{
-    height: 100%;
-    width: 65%;
-}
+.our-services {
+  text-align: center;
+  width: 100%; }
+  .our-services h2 {
+    margin: 32px;
+    font-size: 29.3 px;
+    font-weight: bold; }
+  .our-services .content-our-services {
+    display: flex; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 35%;
+      margin: 5px 10px; }
+      .our-services .content-our-services .item-content-our-services img {
+        height: 96px; }
+      .our-services .content-our-services .item-content-our-services h5 {
+        margin-top: 12px;
+        font-size: 14.86px;
+        font-weight: bold;
+        height: 20px;
+        line-height: 20px;
+        overflow: hidden; }
+      .our-services .content-our-services .item-content-our-services p {
+        font-size: 11.86px;
+        height: 60px;
+        line-height: 20px;
+        overflow: hidden; }
 
-.contact{
-    height: 42px;
-    line-height: 42px;
-}
-
-.contact ul{
+.our-clients {
+  text-align: center; }
+  .our-clients h2 {
+    margin: 32px;
+    font-size: 29.3 px;
+    font-weight: bold; }
+  .our-clients .content-our-clients {
     display: flex;
-    justify-content: flex-end;
-}
+    margin: 0 2em; }
+    .our-clients .content-our-clients div {
+      width: 20%; }
 
-.contact ul li{
-    font-size: 9.86px;
-    font-family: Roboto;
-    color: #939393;
-    padding: 0px 10px;
-}
+.our-articles h2 {
+  margin: 32px;
+  font-size: 29.3 px;
+  font-weight: bold;
+  text-align: center; }
+.our-articles .content-our-articles {
+  display: flex; }
+  .our-articles .content-our-articles h2 {
+    margin: 32px;
+    font-size: 29.3 px;
+    font-weight: bold; }
+  .our-articles .content-our-articles .item-content-our-articles {
+    margin: 0 10px;
+    width: 35%; }
+    .our-articles .content-our-articles .item-content-our-articles img {
+      width: 100%; }
+    .our-articles .content-our-articles .item-content-our-articles h5 {
+      margin-top: 0.8em;
+      font-size: 13.3px;
+      font-weight: bold;
+      height: 20px;
+      line-height: 20px;
+      overflow: hidden; }
+    .our-articles .content-our-articles .item-content-our-articles p {
+      font-size: 9.86px;
+      height: 54px;
+      line-height: 18px;
+      overflow: hidden; }
 
-.contact ul li a{
-    font-weight: bold;
-    color: #939393;
-    text-decoration-line: none;
-}
-
-
-.menu{
-    height: 43px;
-    line-height: 43px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.menu nav ul {
-    padding: 11px 0px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.menu nav ul li{
-    text-align: center;
-    padding: 0px 10px;
-    line-height: 20px;
-    height: 20px;
-    
-}
-
-.menu nav ul li a{
-    padding: 0px 5px;
-    font-size: 11.86px;
-    font-weight: bold;
-    color: #939393;
-    text-decoration-line: none;
-}
-.menu nav ul li:hover{
-    background: #00a2ed;
-    border-radius: 20px;
-}
-.menu nav ul li:hover >a{
-    color: #ffffff;
-}
-
-.mxh ul{
-    display: flex;
-}
-.mxh ul li{
-    line-height: 55px;
-    padding: 0px 10px;
-}
-
-.slide{
-    height: 31.25%;
-    width: 100%;
-}
-.slide img{
-    height: 100%;
-    width: 100%;
-}
-
-
-/*our services*/
-.our-services{
-    text-align: center;
-    color: #838383;
-    margin: 32px 50px;
-}
-
-.header-our-services{
-    color: #838383;
-    font-size: 29.3px;
-    font-weight: bold;
-    height: 21px;
-}
-
-.content-out-services{
-    display: flex;
-    justify-content: center;
-    margin-top: 62px;
-}
-
-.col-content-out-services{
-    width: 100%;
-}
-
-.col-content-out-services div img{
-    height: 96px;
-}
-
-.col-content-out-services div h3{
-    margin: 24px 0px;
-
-}
-
-.col-content-out-services div p{
-    margin: 24px 0px;
-    font-size: 11.86px;
-}
-
-/*clinets*/
-.our-clients{
-    text-align: center;
-    color: #838383;
-    margin: 32px 20px;
-}
-
-.header-our-clients{
-    color: #838383;
-    font-size: 29.3px;
-    font-weight: bold;
-    height: 21px;
-}
-
-.content-out-clients{
-    display: flex;
-    justify-content: center;
-    margin-top: 62px
-}
-
-.col-content-out-clients{
-    width: 100%;
-    text-align: center;
-}
-
-/*our art*/
-.our-articles{
-    color: #838383;
-    margin: 42px 8.5%;
-}
-
-.header-our-articles{
-    color: #838383;
-    font-size: 29.3px;
-    font-weight: bold;
-    height: 21px;
-    text-align: center;
-}
-
-.content-out-articles{
-    display: flex;
-    justify-content: center;
-    margin-top: 62px;
-}
-
-.col-content-out-articles{
-    width: 100%;
-    margin: 0px 5px;
-}
-
-.col-content-out-articles div img{
-    height: auto;
-    width: 100%;
-}
-
-.col-content-out-articles div h3{
-    margin-top: 24px;
-}
-
-.col-content-out-articles div p{
-    margin: 12px 10px 0px 0px;
-    font-size: 11.86px;
-}
-
-footer{
-    background: #323232;
-    min-height: 400px;
-    width: 100;
-    display:flex;
-    justify-content: center;
-    padding: 20px;
-    color: #ffffff;
-}
-
-.about-vinsofts{
-    width: 25%;
-    margin: 10px;
-}
-
-.about-vinsofts p{
-    font-size: 10.86px
-}
-
-.contact-us{
-    width:35%;
-    margin: 10px;
-}
-.contact-us div h5{
-    color: #54584c;
-}
-.contact-us div div div input,.contact-us div div input{
-    height: 25px;
-    width: 100%;
-}
-
-.our-info{
+footer {
+  min-height: 400px;
+  background: #323232;
+  display: flex; }
+  footer .item-footer {
+    margin: 2em 2em;
     width: 35%;
-    margin: 10px;
-}
-.our-info p{
-    font-size: 10.86px
-}
+    color: #ffffff;
+    font-weight: bold; }
+    footer .item-footer h4 {
+      font-size: 14.86px;
+      line-height: 20px;
+      font-weight: bold; }
+    footer .item-footer img {
+      height: 3px;
+      width: 100%; }
+    footer .item-footer div p {
+      color: #ffffff;
+      font-size: 10.86px; }
+    footer .item-footer .map-info {
+      width: 100%;
+      height: auto; }
 
-@media screen and (max-width: 840px) {
-    .col-content-out-services{width: 50%;}
-    .content-out-services{flex-wrap: wrap;}
-    .col-content-out-clients{width: 33%}
-    .content-out-clients{flex-wrap: wrap}
-    .col-content-out-articles{width: 48%}
-    .content-out-articles{flex-wrap: wrap}
-    footer{flex-wrap: wrap;}
-    .about-vinsofts{
-        width: 30%;
-    }
-    .contact-us{
-        width: 65%;
-    }
-    .our-info{
-        width: 100%;
-    }
-    .mini-menu{
-        display:flex;
-        justify-content: flex-end;      
-    }
+.carousel-item img {
+  width: 100%; }
 
-    
-    .menu-contact{
-        display: none;
-    }
-}
-@media screen and (max-width: 720px) {
-    .col-content-out-services{width: 100%;}
-    .content-out-services{flex-wrap: wrap;}
-    .col-content-out-clients{width: 50%}
-    .content-out-clients{flex-wrap: wrap}
-    .col-content-out-articles{width: 100%}
-    .content-out-articles{flex-wrap: wrap;}
-    footer{flex-wrap: wrap;}
-    .about-vinsofts{
-        width: 100%;
-    }
-    .contact-us{
-        width: 100%;
-    }
-    .our-info{
-        width: 100%;
-    }
-}
+.btn {
+  height: 20px;
+  margin: 0;
+  padding: 0 0.2em;
+  font-size: 11.86px;
+  font-weight: bold; }
+
+.form-group label {
+  font-size: 10.86px;
+  color: #66614d;
+  font-weight: bold; }
+.form-group .firstlastname {
+  display: flex; }
+  .form-group .firstlastname #firstname {
+    width: 45%; }
+  .form-group .firstlastname #lastname {
+    margin-left: 0.3em;
+    width: 60%; }
+
+.form-control {
+  height: 30px;
+  font-size: 12.86px; }
+
+@media screen and (max-width: 800px) {
+  body {
+    max-width: 800px;
+    margin: 0 auto; }
+
+  .our-services .content-our-services {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 45%; }
+
+  .our-clients .content-our-clients {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-clients .content-our-clients div {
+      width: 33%; }
+
+  .our-articles .content-our-articles {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-articles .content-our-articles .item-content-our-articles {
+      width: 45%; }
+
+  footer {
+    flex-wrap: wrap; }
+    footer .item-footer {
+      width: 100%; } }
+@media screen and (max-width: 680px) {
+  .header-page .contact-menu {
+    display: none; }
+  .header-page .mini-menu {
+    margin-right: 2em;
+    width: 75%;
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    margin-top: 30px; }
+    .header-page .mini-menu div {
+      margin-top: 32px;
+      background: #ffffff;
+      border-radius: 5px;
+      position: absolute;
+      z-index: 100; }
+      .header-page .mini-menu div a {
+        color: #00a2ed;
+        font-weight: bold;
+        font-size: 11.86px; }
+    .header-page .mini-menu button {
+      color: #00a2ed;
+      background: #ffffff;
+      border: 2px solid #00a2ed;
+      padding: 0 5px;
+      font-weight: bold;
+      font-size: 11.86px; } }
+@media screen and (max-width: 640px) {
+  body {
+    max-width: 640px;
+    margin: 0 auto; }
+
+  .our-services .content-our-services {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 65%; }
+
+  .our-clients .content-our-clients {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-clients .content-our-clients div {
+      width: 50%; }
+
+  .our-articles .content-our-articles {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-articles .content-our-articles .item-content-our-articles {
+      width: 90%; }
+
+  footer {
+    flex-wrap: wrap; }
+    footer .item-footer {
+      width: 100%; } }
+@media screen and (max-width: 560px) {
+  body {
+    max-width: 540px;
+    margin: 0 auto; }
+
+  .header-page .logo-slogan .slogan {
+    display: none; } }
+
+/*# sourceMappingURL=style.css.map */
