--- a/01_thangnv/demogiaodien/css/cssrun/below.css
+++ b/01_thangnv/demogiaodien/css/cssrun/below.css
@@ -1,86 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-  color: #706972; }
-
-body {
-  max-width: 60em;
-  margin: 0 auto; }
-
-li {
-  list-style-type: none; }
-
-a {
-  text-decoration-line: none; }
-
-.header-page {
-  display: flex;
-  height: 85px; }
-  .header-page .logo-slogan {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 35%;
-    background: transparent; }
-    .header-page .logo-slogan .logo {
-      height: 55px;
-      margin: 0.5em 2em; }
-    .header-page .logo-slogan .slogan {
-      height: 30px;
-      font-size: 9.86px;
-      margin: 0 3em; }
-  .header-page .mini-menu {
-    display: none; }
-  .header-page .contact-menu {
-    height: 100%;
-    width: 75%;
-    margin-right: 2em; }
-    .header-page .contact-menu .contact {
-      height: 35px;
-      line-height: 35px;
-      font-size: 9.86px; }
-      .header-page .contact-menu .contact ul {
-        height: 100%;
-        display: flex;
-        justify-content: flex-end; }
-        .header-page .contact-menu .contact ul li {
-          margin-left: 1em; }
-          .header-page .contact-menu .contact ul li p img {
-            margin-right: 0.2em;
-            margin-bottom: 0.3em; }
-    .header-page .contact-menu .menu {
-      height: 50px;
-      line-height: 50px;
-      display: flex;
-      justify-content: flex-end; }
-      .header-page .contact-menu .menu .left-menu {
-        font-size: 11.86px;
-        font-weight: bold; }
-        .header-page .contact-menu .menu .left-menu ul {
-          height: 100%;
-          display: flex;
-          padding-top: 15px; }
-          .header-page .contact-menu .menu .left-menu ul li {
-            height: 20px;
-            line-height: 20px;
-            margin-left: 0.6em; }
-            .header-page .contact-menu .menu .left-menu ul li a {
-              height: 20px;
-              margin: 0 5px; }
-            .header-page .contact-menu .menu .left-menu ul li:hover {
-              background: #00a2ed;
-              border-radius: 8px; }
-            .header-page .contact-menu .menu .left-menu ul li:hover a {
-              color: #ffffff;
-              text-decoration-line: none; }
-      .header-page .contact-menu .menu .right-menu ul {
-        display: flex; }
-        .header-page .contact-menu .menu .right-menu ul li {
-          margin-top: -0.3em;
-          margin-left: 0.4em; }
-
 .our-services {
   text-align: center;
   width: 100%; }
@@ -287,4 +204,4 @@ footer {
   .header-page .logo-slogan .slogan {
     display: none; } }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=below.css.map */
