--- a/07_kiendv/Vinsofts/src/css/above.css
+++ b/07_kiendv/Vinsofts/src/css/above.css
@@ -32,4 +32,16 @@ header .fixed-top {
   height: 10px;
   border-radius: 50%; }
 
+footer {
+  padding: 0 30px 0 30px;
+  background: #323232;
+  color: #ffffff; }
+  footer h3 {
+    margin-top: 42px; }
+  footer .label {
+    margin-top: 20px; }
+  footer #googleMap {
+    width: 100%;
+    height: 225px; }
+
 /*# sourceMappingURL=above.css.map */
