--- a/07_kiendv/Vinsofts/src/sass/above.scss
+++ b/07_kiendv/Vinsofts/src/sass/above.scss
@@ -45,3 +45,19 @@ header {
 	height: 10px;
 	border-radius: 50%;
 }
+
+footer {
+	padding: 0 30px 0 30px;
+	h3 {
+		margin-top: 42px;
+	}
+	background: #323232;
+	color: #ffffff;
+	.label {
+		margin-top: 20px;
+	}
+	#googleMap {
+		width: 100%;
+		height: 225px;
+	}
+}
