--- a/01_thangnv/demogiaodien/css/cssdev/above.scss
+++ b/01_thangnv/demogiaodien/css/cssdev/above.scss
@@ -1,127 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    color: #706972;
-}
+.our-services{
+    text-align: center;
+    width: 100%;
+    h2{
+        margin: 32px;
+        font-size: 29.3 px;
+        font-weight: bold;
+    }
 
-body {
-    max-width: 60em;
-    margin: 0 auto;
-}
-
-li {
-    list-style-type:none; 
-}
-
-a {
-    text-decoration-line: none;
-}
-
-// Header -page
-.header-page{
-    display: flex;
-    height: 85px;
-
-    .logo-slogan{
+    .content-our-services{
         display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 35%;
-        background: transparent;
-
-        .logo{
-            height: 55px;
-            margin: 0.5em 2em;
-        }
-
-        .slogan{
-            height: 30px;
-            font-size: 9.86px;
-            margin: 0 3em;
-        }
-    }
-
-    .mini-menu{
-        display: none;
-    }
-
-    .contact-menu{
-        height: 100%;
-        width: 75%;
-        margin-right: 2em;
-
-        .contact{
-            height: 35px;
-            line-height: 35px;
-            font-size: 9.86px;
-
-            ul{
-                height: 100%;
-                display: flex;
-                justify-content: flex-end;
-
-                li{
-                    margin-left:1em;
-                    p{
-                        img{
-                            margin-right:0.2em;
-                            margin-bottom: 0.3em;
-                        }
-                    }
-                }
+        .item-content-our-services{
+            width: 35%;
+            margin: 5px 10px;
+            img{
+                height: 96px;
             }
-        }
-
-        .menu{
-            height: 50px;
-            line-height: 50px;
-            display: flex;
-            justify-content: flex-end;
-            .left-menu{
-                font-size: 11.86px;
+    
+            h5{
+                margin-top:12px; 
+                font-size: 14.86px;
                 font-weight: bold;
-
-                ul{
-                    height: 100%;
-                    display: flex;
-                    padding-top: 15px; 
-
-                    li{
-                        height: 20px;
-                        line-height: 20px;
-                        margin-left: 0.6em;
-
-                        a{
-                            height: 20px;
-                            margin: 0 5px;
-                        }
-
-
-                        &:hover{
-                            background:#00a2ed;
-                            border-radius: 8px;
-                        }
-                        &:hover a{
-                           color: #ffffff;
-                           text-decoration-line: none;
-                        }
-                    }
-                }
+                height: 20px;
+                line-height: 20px;
+                overflow: hidden;
             }
-
-            .right-menu{
-
-                ul{
-                    display: flex;
-                    
-                    li{
-                        margin-top: -0.3em;
-                        margin-left:  0.4em;
-                    }
-                }
+    
+            p{
+                font-size: 11.86px;
+                height: 60px;
+                line-height: 20px;
+                overflow: hidden;
             }
         }
-    }
+    }    
 }
